# ICRA-electronics-design-competition

./: README.md
RoboRTS/: CMakeLists.txt
RoboRTS/modules/decision/behavior_tree/: behavior_decision_sim_node.cpp
RoboRTS/modules/driver/camera/: camera_node.cpp  camera_param.h
RoboRTS/modules/driver/serial/: CMakeLists.txt  curltest.cpp  curltest.h  infantry_info.h  serial_com_node.cpp
RoboRTS/modules/perception/detection/armor_detection/: armor_detection_client.cpp
RoboRTS/modules/perception/detection/armor_detection/constraint_set/: constraint_set.cpp  constraint_set.h
RoboRTS/modules/perception/localization/: localization_client.cpp
RoboRTS/modules/planning/global_planner/: global_planner_client.cpp
RoboRTS/modules/planning/local_planner/: local_client.cpp
RoboRTS/modules/stream/tf_tree/config/: tf_tree.prototxt
RoboRTS/tools/map/: map.pgm  map.yaml
RoboRTS/tools/map/Untitled Folder/: map.pgm
RoboRTS/tools/script/: run.sh
RoboRTS/tools/simulator/: simulator.launch
TCP_Communicate/: CMakeLists.txt  main.cpp
odom/odom_ws/src/: .rosinstall  .rosinstall.bak
saleRobot/: Makefile  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  map_save.sh  moc_mainwindow.cpp  runUSB.sh  saleRobot  saleRobot.pro  saleRobot.pro.user.2ee5f98  ui_mainwindow.h
